Make it compatible with JDK 11